# gol-qt

./: CMakeLists.txt  README.org
resources/: mainwindow.ui  resources.qrc
resources/forms/: mainwindow.ui
resources/templates/: glider_NE  glider_NW  glider_SE  glider_SW
src/: cellpainter.cpp  cellpainter.h  graphicsview.cpp  graphicsview.h  grid.cpp  grid.h  gridcellneighbouriterator.cpp  gridcellneighbouriterator.h  gridmousetool.cpp  gridmousetool.h  gridpainter.cpp  gridpainter.h  gridview.cpp  gridview.h  main.cpp  mainwindow.cpp  mainwindow.h  simulation.cpp  simulation.h  templatemanager.cpp  templatemanager.h  templatepainter.cpp  templatepainter.h
